# ai-embedding

./: .env.example  .gitignore  README.md  SETUP(Mac).md  SETUP(windows).md  main.py  main_embedding.py  main_search.py  pyproject.toml
.db/sqlite/: my_database.db
doc/: SETUP(Mac).md  SETUP(windows).md  pyproject.toml.ref
notebook/: 00_csv_to_sqlite.ipynb  01_csv_to_sqlite.ipynb  01_embedding.ipynb  01_oracle_to_faiss.ipynb  01_rdb_to_faiss.ipynb  01_sqlite_to_chroma.ipynb  02_search_from_faiss.ipynb  02_sqlite_to_faiss.ipynb  03_embed_category.ipynb  11_ContextualCompressionRetriever.ipynb  12_EnsembleRetriever.ipynb  21_intent_with_llm.ipynb  22_sentence_similarity.ipynb  99_intent_with_llm.ipynb  99_jylim1.ipynb  99_ktkim2_practice_1.ipynb  99_ktkim2_practice_2.ipynb  99_llm_for_intent.ipynb  99_oracle_to_faiss.ipynb  99_search_accuracy.ipynb
notebook/utils/: 01_pretty_print.ipynb  02_pretty_print_with_score.ipynb  03_intent_based_filtering.ipynb  04_classify_query_type.ipynb  05_score_calcuator.ipynb
utils/: __init__.py  filtering.py
